--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,26 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Accessibility Analyzer Backend API",
   "dependencies": {
+    "@axe-core/puppeteer": "^4.10.0",
     "axe-core": "^4.10.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "mongoose": "^8.9.5",
     "puppeteer": "^24.22.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
