--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "Accessibility Analyzer Backend API",
   "dependencies": {
     "@axe-core/puppeteer": "^4.10.0",
+    "@google/generative-ai": "^0.24.1",
     "axe-core": "^4.10.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
